# pe-suite

./: .gitattributes  .gitignore  ARCHITECTURE.md  DESIGN.md  README.md
docs/: SCRAPER_PLAYBOOK.md
fetch_service/: __init__.py  models.py  paths.py  runner.py  (+3 more)
pmsuite/: .gitignore  API.md  DESIGN.md  EXCELBUILDER.md  EXECUTIVE_CHANGES_SUMMARY.md  HANDOFF.md  INTERACTIVE_SURFACE.md  JSONFILE.md  LICENSE  MASTERECAP.md  PLAYWRIGHT_SCREENING.md  README.md  STREAMLIT.md  pyproject.toml
pmsuite/.github/workflows/: test.yml
pmsuite/components/gantt_chart/: __init__.py
pmsuite/components/gantt_chart/frontend/: index.html  package-lock.json  package.json  vite.config.js
pmsuite/components/gantt_chart/frontend/src/: GanttComponent.jsx  gantt-theme.css  index.jsx
pmsuite/examples/: npde_demo.json
pmsuite/gantt_builder/: __init__.py  api.py  baseline.py  completion.py  critical_path.py  delays.py  editing.py  errors.py  excel_builder.py  locations.py  logging_config.py  models.py  project_io.py  scheduler.py  time_utils.py  validation.py
pmsuite/projects/: asic_program.json  small_demo.json
pmsuite/scripts/: add_hierarchy_to_npde.py  migrate_usa_to_dal.py  rebuild_demos.py
pmsuite/tests/: conftest.py  playwright_helpers.py  test_api.py  test_baseline.py  test_completion.py  test_critical_path.py  test_delays.py  test_dependencies.py  test_editing.py  test_excel_builder.py  test_models.py  test_project_io.py  test_streamlit_playwright.py  test_validation.py
pmsuite/tests/fixtures/: npde_playwright_test_fixture.json
pmsuite/ui/: __init__.py  streamlit_app.py
(+37 files in other folders)
